Build qemu-debian-*.init script per host

--- a/Makefile.config
+++ b/Makefile.config
@@ -1,7 +1,7 @@
-DEB_HOSTNAME=	`uname -n`-$(DEB_CODENAME)-$(DEB_ARCH)
-DEB_ROOTFS_SIZE=10G
+DEB_CODENAME:=		wheezy
+DEB_ARCH:=		armhf
+DEB_MIRROR:=		http://ftp.jaist.ac.jp/debian
 
-DEB_CODENAME=	wheezy
-DEB_ARCH=	armhf
-DEB_MIRROR=	http://ftp.jaist.ac.jp/debian
+DEB_HOSTNAME:=		$(shell uname -n)-$(DEB_CODENAME)-$(DEB_ARCH)
+DEB_ROOTFS_SIZE:=	10G
 
