--- a/Makefile.config
+++ b/Makefile.config
@@ -1,6 +1,9 @@
 DEB_CODENAME:=		wheezy
-DEB_ARCH:=		armhf
 DEB_MIRROR:=		http://ftp.jaist.ac.jp/debian
+
+DEB_ARCH:=		armhf
+#DEB_ARCH:=		armel
+#DEB_ARCH:=		amd64
 
 DEB_HOSTNAME:=		$(shell uname -n)-$(DEB_CODENAME)-$(DEB_ARCH)
 DEB_ROOTFS_SIZE:=	10G
